--- a/src/components/Catalogue/catalogue.css
+++ b/src/components/Catalogue/catalogue.css
@@ -1,20 +1,60 @@
-.catalogue{
+.catalogue {
     padding-top: 100px;
+    display: flex;
+    font-family: 'News Cycle', sans-serif;
 }
-.catalogue-menu{
-    padding:12px 50px 50px 50px;
-    width: 30vh;
+
+.catalogue-menu {
+    position: fixed;
+    padding: 1% 4% 4% 5%;
+    width: 20vh;
     height: 77vh;
     border-right: 1px solid black;
 }
+
 .gender {
     display: flex;
     flex-direction: column;
-    font-size: 14px;
-}
-.categories{
-    display: flex;
-    flex-direction: column;
-    font-size: 14px;
+    font-size: 13px;
 }
 
+.categories {
+    display: flex;
+    flex-direction: column;
+    font-size: 13px;
+}
+
+.display-products {
+    width: 100%;
+    padding-right: 5%;
+    padding-left: 20%;
+}
+
+.dropdown-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 20px;
+
+}
+
+.dropdown {
+    padding: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #333;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.dropdown:hover {
+    border-color: #666;
+}
+.all-card{
+    padding-top: 1%;
+    padding-bottom: 1%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    row-gap: 30px;
+    
+}
