--- a/src/components/Catalogue/catalogue.css
+++ b/src/components/Catalogue/catalogue.css
@@ -1,5 +1,5 @@
 .catalogue {
-    padding-top: 100px;
+    padding-top: 85px;
     display: flex;
     font-family: 'News Cycle', sans-serif;
 }
@@ -26,8 +26,8 @@
 
 .display-products {
     width: 100%;
-    padding-right: 5%;
-    padding-left: 20%;
+    padding-right: 2%;
+    padding-left: 20rem;
 }
 
 .dropdown-container {
@@ -35,7 +35,7 @@
     align-items: center;
     justify-content: flex-end;
     margin-top: 20px;
-
+    margin-right:7% ;
 }
 
 .dropdown {
@@ -53,8 +53,9 @@
 .all-card{
     padding-top: 1%;
     padding-bottom: 1%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    row-gap: 30px;
+    display: flex;
+    flex-direction: row;
+    row-gap: 20px;
+    flex-wrap: wrap;
     
 }
