--- a/src/components/Catalogue/productCard.css
+++ b/src/components/Catalogue/productCard.css
@@ -7,6 +7,8 @@
     justify-content: center;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     font-size: 12px;
+    margin-right: 10px;
+    margin-left: 10px;
     
 }
 .card p{
