--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@700&display=swap');
 
 .logo img{
-    height: 53px;
+    height: 68px;
     cursor: pointer;
 }
 .category{
-    font-size: 13px;
+    font-size: 16px;
     font-family: 'News Cycle', sans-serif;
     color: black;
     
 }
 .category span{
-    margin:25px;
+    margin:30px;
     cursor: pointer;
 }
 ::placeholder{
-    font-size: 12px;
+    font-size: 15px;
     font-family: 'News Cycle', sans-serif;
 }
 .search-container{
@@ -24,12 +24,13 @@
 }
 .menu-bar{
     display: flex;
-    font-size: 11px;
+    font-size: 14px;
 }
 .profile , .wishlist, .bag{
     color: black;
     display: flex;
-    margin: 12px;
+    margin: 15px;
+    margin-top: 12px;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
