--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,8 +3,8 @@
     grid-template-columns: repeat(5,1fr);   
 }
 .budget-buy, .top-brands{
-    margin: 20px;
-    width: 200px;
+    margin: 25px;
+    width: 250px;
     cursor: pointer;
 }
 .mega-deals-container{
@@ -12,7 +12,8 @@
     grid-template-columns: repeat(4,1fr);
 }
 .mega-deals{
-    margin: 20px;
-    width: 300px;
+    margin: 25px;
+    margin-left: 40px;
+    width: 350px;
     cursor: pointer;
 }
