--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,32 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@700&display=swap');
 
-.logo img{
+.logo img {
     height: 68px;
     cursor: pointer;
 }
-.category{
+
+.category {
     font-size: 16px;
     font-family: 'News Cycle', sans-serif;
     color: black;
-    
+
 }
-.category span{
-    margin:30px;
+
+.category span {
+    margin: 30px;
     cursor: pointer;
 }
-::placeholder{
+
+::placeholder {
     font-size: 15px;
     font-family: 'News Cycle', sans-serif;
 }
-.search-container{
+
+.search-container {
     margin-left: auto;
     padding-right: 30px;
 }
-.menu-bar{
+
+.menu-bar {
     display: flex;
     font-size: 14px;
 }
-.profile , .wishlist, .bag{
+
+.profile,
+.wishlist,
+.bag {
     color: black;
     display: flex;
     margin: 15px;
@@ -37,4 +45,19 @@
     font-family: 'News Cycle', sans-serif;
 }
 
+.bag-count {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 20px;
+    height: 20px;
+    background: #e72f73;
+    border-radius: 24px;
+    margin-left: 20px;
+    top: 9px;
+    color: white;
+    font-size: 11px;
+    font-weight: bold;
 
+}
