--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -17,3 +17,23 @@
     width: 350px;
     cursor: pointer;
 }
+/* Responsive Styles */
+
+@media (max-width: 1200px) {
+    .budget-buy,
+    .top-brands,
+    .mega-deals {
+      width: 100%;
+      margin: 15px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .budget-buy-container,
+    .top-brands-container,
+    .mega-deals-container {
+      grid-template-columns: repeat(2, 2fr);
+      grid-gap: 40px;
+      width:400px;
+    }
+  }
