--- a/src/components/bag/bag.css
+++ b/src/components/bag/bag.css
@@ -207,3 +207,58 @@
     border-radius: 3px;
     cursor: pointer;
 }
+
+
+/* Responsive Styles */
+
+@media (max-width: 768px) {
+    .bag-header img {
+        width: 120px;
+        padding: 5px 10px;
+      }
+    
+      .bag-header div {
+        padding-right: 10px;
+      }
+    
+      .bag-empty img {
+        width: 100px;
+      }
+    
+      .bag-empty button {
+        width: 180px;
+        height: 40px;
+        font-size: 14px;
+      }
+      .bag-main{
+        flex-direction: column;
+    }
+      .bag-offers,
+      .convi-fee,
+      .display-card {
+        margin: 15px;
+        padding: 10px;
+        font-size: 12px;
+      }
+    
+      .bag-card {
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 15px;
+        padding-bottom: 5px;
+      }
+    
+      .bag-card img {
+        width: 100%;
+        padding-right: 0;
+        margin-bottom: 10px;
+      }
+    
+      .bag-card button {
+        margin: 5px 0;
+      }
+      .bag-footer img{
+        width:0px;
+      }
+      
+  }
