improve login and signup

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -61,3 +61,9 @@
     font-weight: bold;
 
 }
+.welcome-menu{
+    padding-left: 15px;
+    padding-right: 40px;
+    padding-bottom: 5px;
+    font-size: 15px;
+}
