--- a/src/components/Bag/paymentPage.css
+++ b/src/components/Bag/paymentPage.css
@@ -83,3 +83,12 @@
     border-radius: 5px;
     cursor: pointer;
   }
+
+  @media (max-width: 768px){
+    .checkout{
+      flex-direction: column;
+    }
+    .payment-container{
+      width: 80%;
+    }
+  }
